--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     text-align: center;
     font-family:'Courier New', Courier, monospace;
-    background-image: url("/img/alas_azules_var6W.jpg");
+    background-image: url(/img/alas_azules_var6W.jpg);
 
 }
 
