--- a/style.css
+++ b/style.css
@@ -64,3 +64,10 @@ ul li a{
     text-shadow: 2px 2px 5px black;
     
 }
+
+ul li a:hover{
+    
+    transform: scale(2.5);
+    color: rgb(211, 9, 9);
+       
+}
